# visual-odometry

./: .gitignore  CMakeLists.txt  readme.md
include/: image_processor.hpp  image_sequence.hpp
src/: image_processor.cpp  image_sequence.cpp  main.cpp
tests/: CMakeLists.txt  test_image_processor.cpp  test_image_sequence.cpp
